# MATLABGraderBot

./: .gitignore  README.md  main.py  pyproject.toml  template.mlx
llm/: Agent.py  llm_error.py
util/: check_file.py  grade_sequence.py  html2text.py  mlx2html.py  mlx2others.py  postprocess_grade.py  process_raw.py  unzip_raw.py
