[project]
name = "matlabgraderbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "lxml>=6.0.1",
    "matlabengine>=25.1.2",
    "openai>=1.106.1",
    "tqdm>=4.67.1",
]
