[project]
name = "matlabgraderbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "matlabengine>=25.1.2",
    "openai>=1.106.1",
    "python-dotenv>=1.1.1",
    "rarfile>=4.2",
    "tqdm>=4.67.1",
]
